--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-
-:root {
-    --highlight: #7ce9ff;
-    --blue: #1c80e4;
-    --white: #ebe7e7;
-}
-
 header *{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -20,21 +13,25 @@ position:sticky;
 height: 23vh;
 display: flex;
 align-items: center;
-background: linear-gradient(0deg, rgba(114,190,255,1) 0%, rgba(34,137,195,1) 100%);
+background: linear-gradient(0deg, var(--blue2) 0%, var(--blue) 100%);
 color:  var(--white);
 justify-content: space-around;
 }
 
 header h1{
-padding: 15px 6vw;
+    text-align: center;
+padding: 15px 2.5vw;
 font-size: 40px;
 }
 
 header ul li{
-letter-spacing: 2px;
+    font-size: 20px;
+    letter-spacing: 2px;
 }
 
 header ul{
+    margin-right: 7vw;
+    padding-left: 10vw;
     max-width: 35vw;
     gap: 5px;
     display: flex;
@@ -44,9 +41,47 @@ header ul{
 
 header ul *:hover{
     color: var(--highlight);
+  
 }
 header ul *{
     color: var(--white);
     list-style-type: none;
     text-decoration: none;
 }
+header #themeBtn{
+    background-color: var(--twhite);
+    border-radius: 12px;
+    padding: 2px 4px 5px 3px;
+    margin-right: 4vw;
+    border: solid black 1px;
+    font-size: 25px;
+    font-style: normal;
+    text-shadow: black 1.5px 1.5px 5px;
+    transition: 250ms;
+    cursor: pointer;
+}
+
+header #themeBtn:hover{
+    background-color: var(--highlight);
+    color:#434343
+}
+
+@media only screen and (max-width: 400px) {
+    header *{
+        width: fit-content;
+    }
+    header #themeBtn{
+        margin-right: 3vw;
+        font-size: 6vw;
+    }
+    header ul{
+        font-size: 12px;
+        padding: 0;
+    }
+    header {
+      flex-direction:  row;
+    }
+    header h1{
+        font-size: 20px;
+    }
+  }
